tried fixing again

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
               run: npm run build
 
             - name: Deploy to Netlify
-              uses: netlify/actions/cli@v1
+              uses: netlify/actions/cli@master
               with:
                   args: deploy --dir=.next --prod
               env:
